OAK-10111: replace Collections utilities with List/Map convenience methods introduced in Java 9+